<resources>
    <string name="app_name">QRify</string>
    <string name="main_activity_scanned">Scanned: %1$s</string>
    <string name="scan_result_activity_copy_button">Copy</string>
    <string name="scan_result_activity_open_page_button">Open website</string>
    <string name="scan_result_activity_share_button">Share</string>
    <string name="scan_result_activity_generated_on">Generated on</string>
    <string name="scan_result_activity_scanned_on">Scanned on</string>
    <string name="scan_result_activity_content_text">Text</string>
    <string name="scan_result_activity_content_url">URL</string>
    <string name="scan_result_activity_content_email">E-Mail</string>
    <string name="scan_result_activity_content_phone">Phone</string>
    <string name="history_fragment_placeholder">Hello history fragment</string>
    <string name="history_slider_close_button">Close</string>
    <string name="history_slider_up_arrow_description">upArrow</string>
    <string name="history_slider_archive">ARCHIVE</string>
    <string name="scanner_activity_generate_button">Generate QR Code</string>
    <string name="generator_activity_generate_button">Save</string>
    <string name="generator_activity_input_text_placeholder">Input text</string>
    <string name="generator_activity_share_button">Share</string>
    <string name="generator_activity_image_description">QR code preview</string>
    <string name="generator_activity_input_title_text">Text:</string>
    <string name="generator_activity_input_title_url">URL:</string>
    <string name="generator_activity_input_title_email">E-Mail:</string>
    <string name="generator_activity_input_title_phone">Phone:</string>
    <string name="generator_activity_phone_type">Phone</string>
    <string name="generator_activity_email_type">E-Mail</string>
    <string name="generator_activity_url_type">URL</string>
    <string name="generator_activity_text_type">Text</string>
    <string name="generator_activity_content_type">Content type:</string>
    <string name="scan_result_activity_send_email_button">Send email</string>
    <string name="scan_result_activity_call_button">Call</string>
    <string name="scan_result_activity_search_button">Search web</string>
    <string name="history_adapter_generated">generated</string>
    <string name="history_adapter_scanned">scanned</string>
</resources>
