<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ScanResultActivity">

    <TextView
        android:id="@+id/contentTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_result_activity_content_url"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Result text"
        app:layout_constraintBottom_toBottomOf="@id/scannedOnText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/contentTypeText"/>

    <TextView
        android:id="@+id/scannedOnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="6dp"
        android:text="@string/scan_result_activity_scanned_on"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/shareButton"/>

    <TextView
        android:id="@+id/scannedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="6dp"
        tools:text="03.04.2020"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/shareButton"/>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/actionButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/scan_result_activity_share_button" />

    <Button
        android:id="@+id/actionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/shareButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/scan_result_activity_search_button" />

</androidx.constraintlayout.widget.ConstraintLayout>