<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/closedHeader"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/arrowImageContainer"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:paddingTop="8dp"
            android:background="@drawable/slider_top_border"
            android:gravity="center">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_keyboard_arrow_up_black_24dp"
                android:contentDescription="@string/history_slider_up_arrow_description" />

        </LinearLayout>

        <TextView
            android:id="@+id/archiveText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:text="@string/history_slider_archive"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/openHeader"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/background_light"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/closeSliderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:drawableStart="@drawable/ic_close_black_24dp"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorPrimary"
            android:text="@string/history_slider_close_button"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/closedHeader"
        app:layout_constraintBottom_toBottomOf="parent">

        <fragment
            android:id="@+id/historyFragment"
            android:name="eu.niggas_with_attitude.qrify.HistoryFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_history"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>